--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
         <div class="container-fluid px-1 py-5 mx-auto">
             <div class="row d-flex justify-content-center">
                 <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
-                    <link rel="stylesheet" href="static/style2.css">
+                    <link rel="stylesheet" href="static/style.css">
                     <h3 class="heading-2">Restaurant Rating</h3>
                     <!-- <p class="blue-text">Just answer a few questions<br> so that we can personalize the right experience for you.</p> -->
                     <div class="card">
